// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management design presentation component renders empty state when no image provided 1`] = `
<div
  class="h-100 w-100 p-3 overflow-auto"
>
  <div
    class="h-100 w-100 d-flex align-items-center position-relative"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Design management design presentation component renders image and overlay when image provided 1`] = `
<div
  class="h-100 w-100 p-3 overflow-auto"
>
  <div
    class="h-100 w-100 d-flex align-items-center position-relative"
  >
    <design-image-stub
      image="test.jpg"
      name="test"
    />
     
    <design-overlay-stub
      dimensions="[object Object]"
      notes=""
      position="[object Object]"
    />
  </div>
</div>
`;
